# opengl-cpp

./: .gitignore  CMakeLists.txt  README.md
include/: EBO.h  ShaderProgram.h  VAO.h  VBO.h
include/glad/: glad.h
res/shaders/: default.frag  default.vert
src/: camera.cpp  config.h  glad.c  main.cpp  utils.cpp  window.cpp
src/include/: camera.h  config.h  utils.h  window.h
src/include/opengl_classes/: BufferObject.h  Shader.h  ShaderProgram.h  Texture.h  VAO.h
src/opengl_classes/: BufferObject.cpp  Shader.cpp  ShaderProgram.cpp  Texture.cpp  VAO.cpp
src/opengl_wrapper/: EBO.cpp  ShaderProgram.cpp  VAO.cpp  VBO.cpp
